# ARIANNA-CHAIN

./: .env.example  Procfile  README.md  arianna_chain.py  core_prompt.txt  env.example  logging_utils.py  main.py  mypy.ini  pyproject.toml  requirements.txt  rewards.py  server.py  setup.cfg  setup.py
.github/workflows/: mypy.yml
arianna/: __init__.py  http_client.py  vector_store.py
arianna_c/: __init__.py  cli.py  generation.py  model.py  monitor.py  quantize.py  reflection.py  tokenizer.py
arianna_core/: __init__.py  config.py  http.py  model.py  reasoning.py  tokenizer.py
datasets/: README.md
finetuning/: grpo_train.py
finetuning/sft/: prepare_code_execution_data.py
models/: moe_adapter.py
prompts/: core.txt
retrieval/: vector_store.py
server/: __init__.py  config.py  security.py
tests/: test_arianna_c.py  test_consistency.py  test_http_client.py  test_iter_dataset.py  test_logger.py  test_logging_utils.py  test_main.py  test_monitor.py  test_passed_monitor.py  test_quantization.py  test_reasoning.py  test_reflection.py  test_review.py  test_rewards_vectorstore.py  test_sanitize_prompt.py  test_server_endpoints.py  test_server_fallback.py  test_vector_store.py
tools/: date_parse.py  math_eval.py  memory_note.py  memory_search.py  text_regex_extract.py  time_now.py
utils/: quantization.py
