[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arianna-chain"
version = "0.1.0"
description = "Arianna-C core engine"
readme = "README.md"
authors = [{name = "Arianna-C Contributors"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0",
    "tokenizers>=0.21.4",
    "Flask>=3.1.1",
    "openai>=1.99.6",
    "gunicorn>=23.0.0",
    "sentence-transformers>=5.1.0",
    "faiss-cpu>=1.11.0.post1",
    "python-telegram-bot>=22.3",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "pytest",
]

[tool.isort]
profile = "black"
known_first_party = "arianna_chain"
line_length = 119

[tool.flake8]
max-line-length = 119
extend-ignore = ["E203"]
